--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Coffee Shop</title>
+        <title>Le Serin</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -35,7 +35,7 @@
         <![endif]-->
 		<div class='preloader'><div class='loaded'>&nbsp;</div></div>
         <header id="home" class="navbar-fixed-top">
-            <div class="header_top_menu clearfix">	
+            <!-- <div class="header_top_menu clearfix">	
                 <div class="container">
                     <div class="row">	
                         <div class="col-md-5 col-md-offset-3 col-sm-12 text-right">
@@ -56,7 +56,7 @@
 
                     </div>			
                 </div>
-            </div>
+            </div> -->
 
             <!-- End navbar-collapse-->
 
@@ -73,18 +73,18 @@
                                         <span class="icon-bar"></span>
                                         <span class="icon-bar"></span>
                                     </button>
-                                    <a class="navbar-brand our_logo" href="#"><img src="assets/images/logo-for-coffee-shop-vector-20164369.png" alt="" /></a>
+                                    <a class="navbar-brand our_logo" href="#"><img src="assets/images/LOGOsimple.png" alt="" /></a>
                                 </div>
 
                                 <!-- Collect the nav links, forms, and other content for toggling -->
                                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                                     <ul class="nav navbar-nav navbar-right">
-                                        <li><a href="#slider">Home</a></li>
-                                        <li><a href="#abouts">About</a></li>
-                                        <li><a href="#features">New Feature</a></li>
-                                        <li><a href="#portfolio">Gallery</a></li>
-                                        <li><a href="#ourPakeg">Menu</a></li>
+                                        <li><a href="#slider">Accueil</a></li>
+                                        <li><a href="#abouts">A propos</a></li>
+                                        <!-- <li><a href="#features">New Feature</a></li> -->
+                                        <li><a href="#footer_widget">Contact</a></li>
+                                        <!-- <li><a href="#ourPakeg">Menu</a></li> -->
                                     </ul>
                                 </div><!-- /.navbar-collapse -->
                             </div><!-- /.container-fluid -->
@@ -101,9 +101,12 @@
                         <div class="main_slider text-center">
                             <div class="col-md-12">
                                 <div class="main_slider_content wow zoomIn" data-wow-duration="1s">
-                                    <h1>Coffee Shop</h1>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi. </p>
-                                    <a href="#features" class="btn-lg">Check Out Our New Features</a>
+                                    <img src="assets/images/leserin_signature-modified.png" alt="" />
+                                    <h4>Le Serin est un média positif : il met en lumière les initiatives inspirantes de son territoire, tout en suscitant l'émerveillement, par le biais d'un journal et de podcasts.</h4>
+                                    <a href="https://www.helloasso.com/associations/le-serin" class="btn-lg">Notre espace sur HelloAsso</a>
+                                    <br><br><br><br>
+                                    <h3>NDLR</h3>
+                                    <p>Ce site est en construction et sera amené à changer très profondément. L'adresse à laquelle vous pouvez le trouver aussi. Nous comptons sur votre compréhension et votre indulgence.</p>
                                 </div>
                             </div>	
                         </div>
@@ -119,19 +122,19 @@
                     <div class="abouts_content">
                         <div class="col-md-6">
                             <div class="single_abouts_text text-center wow slideInLeft" data-wow-duration="1s">
-                                <img src="assets/images/about.png" alt="" />
+                                <img src="assets/images/LOGO LeSerinPodcast.png" alt="" />
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="single_abouts_text wow slideInRight" data-wow-duration="1s">
-                                <h4>About us</h4>
-                                <h3>WE ARE TASTY</h3>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's stan</p>
-
-                                <p>dard dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesettingdard dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting</p>
-
-                                <a href="#portfolio" class="btn btn-primary"> Check Out Our Coffee Menu</a>
+                                <h4>A propos</h4>
+                                <!-- <h3>Le Serin</h3> -->
+                                <p>Le projet du journal est parti du constat que, tout autour de nous, il existe des gens exceptionnels, sources de grandes inspirations mais qu’ils sont tapis dans l’ombre. Les actions innovantes sont nombreuses sur le territoire alors que, de la même manière, elles ne sont pas connues ou reconnues.</p>
+                                <p>Le Serin souhaite donc, sans prétention, mettre en lumière ces acteurs, mettre en valeur les actions positives par la beauté, en suscitant l’émerveillement.</p>
+                                <p>Pour porter le projet, nous sommes nombreux : des bénévoles engagés qui ont tous quelque chose à offrir par l'écriture, la photographie, le dessin, la poésie, la philosophie…</p>
+                                <p>La mission du projet : Tendre vers une sérénité émotionnelle et permettre la mise en mouvement pour un demain meilleur.</p>
+                                <!-- <a href="#portfolio" class="btn btn-primary"> Numéros déjà parus</a> -->
                             </div>
                         </div>
                     </div>
@@ -139,7 +142,7 @@
             </div>
         </section>
 
-        <section id="features" class="features">
+        <section id="marque_pyrenees" class="features">
             <div class="slider_overlay">
                 <div class="container">
                     <div class="row">
@@ -148,11 +151,10 @@
                                 <div class="main_features_content text-left">
                                     <div class="col-md-6">
                                         <div class="single_features_text">
-                                            <h4>Special Coffee</h4>
-                                            <h3>Taste of Precious</h3>
-                                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's stan</p>
-                                            <p>dard dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesettingdard dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting</p>
-
+                                            <h4>VIP</h4>
+                                            <h3>De la marque Pyrénées</h3>
+                                            <p>Le Serin est, dès sa création, entré dans la communauté des Valeureux Influenceurs Pyrénéens, de la marque Pyrénées, démontrant son attachement à une culture locale, montagnarde, soucieuse de son environnement. </p>
+                                            <a href="https://marque-pyrenees.fr/qui-sont-les-vip/"><img src="assets/images/marque-pyrenees-logo-header.png" alt="" /></a>
                                             <!--<a href="" class="btn btn-primary">click here</a>-->
                                         </div>
                                     </div>
@@ -164,7 +166,24 @@
             </div>
         </section>
 
-        <section id="portfolio" class="portfolio">
+        <section id="abouts" class="abouts">
+            <div class="container">
+                <div class="row">
+                    <div class="abouts_content">
+                        <div class="single_abouts_text wow slideInBottom" data-wow-duration="1s">
+                            <h4>Concrètement</h4>
+                            <!-- <h3>Le Serin</h3> -->
+                            <br>
+                            <p>Le Serin sera un journal bimestriel de 20 pages mettant en avant les acteurs du territoire sous forme d'une brochure à l'italienne avec des photographies, le tout en noir et blanc.</p>
+                            <p>Chaque reportage écrit dans le journal (imprimé localement sur papier recyclé à <a href="https://www.imprimerie-pere.fr">l'imprimerie Péré</a>) sera en lien avec sa version audio, sous forme de podcast, diffusé à la radio associative <a href="https://www.frequenceluz.com/">Fréquence Luz</a> ou disponible sur toutes les plateformes d'écoute, grâce à un hébergeur français, et le plus local possible : <a href="https://podcloud.fr/">podCloud</a>, basé à Toulouse.</p>
+                            <!-- <a href="#portfolio" class="btn btn-primary"> Numéros déjà parus</a> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- <section id="portfolio" class="portfolio">
             <div class="container">
                 <div class="row">
                     <div class="portfolio_content text-center  wow fadeIn" data-wow-duration="5s">
@@ -236,9 +255,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
-        <section id="ourPakeg" class="ourPakeg">
+        <!-- <section id="ourPakeg" class="ourPakeg">
             <div class="container">
                 <div class="main_pakeg_content">
                     <div class="row">
@@ -303,9 +322,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
-        <section id="mobaileapps" class="mobailapps">
+        <!-- <section id="mobaileapps" class="mobailapps">
             <div class="slider_overlay">
                 <div class="container">
                     <div class="row">
@@ -326,35 +345,38 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section id="footer_widget" class="footer_widget">
             <div class="container">
                 <div class="row">
                     <div class="footer_widget_content text-center">
-                        <div class="col-md-4">
+                        <!-- <div class="col-md-4"> -->
+                        <div class="col-md-12">
                             <div class="single_widget wow fadeIn" data-wow-duration="2s">
-                                <h3>Take it easy with location</h3>
+                                <h3>Caroline JOLY</h3>
+                                <p>Rédactrice en chef</pp>
 
                                 <div class="single_widget_info">
-                                    <p>112-Legere ancillae vix ne.
-
-                                        <span>Te elit putent propriae eum,</span>
-                                        <span>aliquip nominati</span>
-                                        <span class="phone_email">phone: +55 123 456 78</span>
-                                        <span>Email: coffee_shop@gmail.com</span></p>
+                                    <p>12 camin deth Barderon
+                                        <span>65400 Arcizans-Avant</span>
+                                        <br>
+                                        <span><i class="fa fa-phone"></i> &nbsp; 06 82 73 22 64</span>
+                                        <span><i class="fa fa-envelope"></i> &nbsp; <a href="mailto:leserin.mediapositif@gmail.com">leserin.mediapositif@gmail.com</a></span>
+                                    </p>
                                 </div>
 
                                 <div class="footer_socail_icon">
-                                    <a href=""><i class="fa fa-facebook"></i></a>
-                                    <a href=""><i class="fa fa-twitter"></i></a>
-                                    <a href=""><i class="fa fa-pinterest-p"></i></a>
-                                    <a href=""><i class="fa fa-youtube"></i></a>
+                                    <span><a href="https://www.helloasso.com/associations/le-serin">HelloAsso</a></span>
+                                    <span><a href="https://linktr.ee/LeSerin">LinkTree</a></span>
+                                    <br><br>
+                                    <a href="https://www.instagram.com/leserin.mediapositif/"><i class="fa fa-instagram"></i></a>
+                                    <a href="https://soundcloud.com/le-serin-621056249"><i class="fa fa-soundcloud"></i></a>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="col-md-4">
+                        <!-- <div class="col-md-4">
                             <div class="single_widget wow fadeIn" data-wow-duration="4s">
                                 <h3>Oppenning Time</h3>
 
@@ -366,16 +388,16 @@
                                         <span>8:00am to 10:00pm</span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
-                        <div class="col-md-4">
+                        <!-- <div class="col-md-6">
                             <div class="single_widget wow fadeIn" data-wow-duration="5s">
-                                <h3>Contact Us</h3>
+                                <h3>Contactez Nous</h3>
 
                                 <div class="single_widget_form text-left">
                                     <form action="#" id="formid">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" name="name" placeholder="Full name" required="">
+                                            <input type="text" class="form-control" name="name" placeholder="Nom Complet" required="">
                                         </div>
 
                                         <div class="form-group">
@@ -383,8 +405,8 @@
                                         </div>
 
                                         <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="Subject">
-                                        </div> <!-- end of form-group -->
+                                            <input type="text" class="form-control" placeholder="Sujet">
+                                        </div>
 
                                         <div class="form-group">
                                             <textarea class="form-control" name="message" rows="3" placeholder="Message"></textarea>
@@ -394,7 +416,7 @@
                                     </form>	
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -408,8 +430,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="copyright wow zoomIn" data-wow-duration="3s">
-                            <p>Made with <i class="fa fa-heart"></i> by <a href="http://bootstrapthemes.co">Bootstrap Themes</a>2016.  Modified by <a href="https://github.com/Abir-Bouhriz">Bouhriz Abir</a>
-                                All Rights Reserved</p>
+                            <p>Fait avec <i class="fa fa-heart"></i> par Le Serin</p>
 						</div>
                     </div>
                 </div>
