--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Le Serin</title>
+        <link rel="icon" type="image/x-icon" href="assets/images/icon.ico">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -73,7 +74,7 @@
                                         <span class="icon-bar"></span>
                                         <span class="icon-bar"></span>
                                     </button>
-                                    <a class="navbar-brand our_logo" href="#"><img src="assets/images/LOGOsimple.png" alt="" /></a>
+                                    <!-- <a class="navbar-brand our_logo" href="#"><img src="assets/images/LOGOsimple.png" alt="" /></a> -->
                                 </div>
 
                                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -83,8 +84,8 @@
                                         <li><a href="#slider">Accueil</a></li>
                                         <li><a href="#abouts">A propos</a></li>
                                         <!-- <li><a href="#features">New Feature</a></li> -->
+                                        <li><a href="#concretement">Concrètement</a></li>
                                         <li><a href="#footer_widget">Contact</a></li>
-                                        <!-- <li><a href="#ourPakeg">Menu</a></li> -->
                                     </ul>
                                 </div><!-- /.navbar-collapse -->
                             </div><!-- /.container-fluid -->
@@ -101,6 +102,7 @@
                         <div class="main_slider text-center">
                             <div class="col-md-12">
                                 <div class="main_slider_content wow zoomIn" data-wow-duration="1s">
+                                    <div class="col-md-6 wow fadeIn"><img src="assets/images/LOGOsimple-modified.png" alt="" /></div>
                                     <img src="assets/images/leserin_signature-modified.png" alt="" />
                                     <h4>Le Serin est un média positif : il met en lumière les initiatives inspirantes de son territoire, tout en suscitant l'émerveillement, par le biais d'un journal et de podcasts.</h4>
                                     <a href="https://www.helloasso.com/associations/le-serin" class="btn-lg">Notre espace sur HelloAsso</a>
@@ -119,17 +121,18 @@
         <section id="abouts" class="abouts">
             <div class="container">
                 <div class="row">
-                    <div class="abouts_content">
+                    <div class="abouts_content col-md-12">
                         <div class="col-md-6">
                             <div class="single_abouts_text text-center wow slideInLeft" data-wow-duration="1s">
                                 <img src="assets/images/LOGO LeSerinPodcast.png" alt="" />
                             </div>
                         </div>
-
+                        <br>
                         <div class="col-md-6">
                             <div class="single_abouts_text wow slideInRight" data-wow-duration="1s">
                                 <h4>A propos</h4>
                                 <!-- <h3>Le Serin</h3> -->
+                                <br>
                                 <p>Le projet du journal est parti du constat que, tout autour de nous, il existe des gens exceptionnels, sources de grandes inspirations mais qu’ils sont tapis dans l’ombre. Les actions innovantes sont nombreuses sur le territoire alors que, de la même manière, elles ne sont pas connues ou reconnues.</p>
                                 <p>Le Serin souhaite donc, sans prétention, mettre en lumière ces acteurs, mettre en valeur les actions positives par la beauté, en suscitant l’émerveillement.</p>
                                 <p>Pour porter le projet, nous sommes nombreux : des bénévoles engagés qui ont tous quelque chose à offrir par l'écriture, la photographie, le dessin, la poésie, la philosophie…</p>
@@ -166,17 +169,25 @@
             </div>
         </section>
 
-        <section id="abouts" class="abouts">
+        <section id="concretement" class="abouts">
             <div class="container">
                 <div class="row">
-                    <div class="abouts_content">
-                        <div class="single_abouts_text wow slideInBottom" data-wow-duration="1s">
-                            <h4>Concrètement</h4>
-                            <!-- <h3>Le Serin</h3> -->
-                            <br>
-                            <p>Le Serin sera un journal bimestriel de 20 pages mettant en avant les acteurs du territoire sous forme d'une brochure à l'italienne avec des photographies, le tout en noir et blanc.</p>
-                            <p>Chaque reportage écrit dans le journal (imprimé localement sur papier recyclé à <a href="https://www.imprimerie-pere.fr">l'imprimerie Péré</a>) sera en lien avec sa version audio, sous forme de podcast, diffusé à la radio associative <a href="https://www.frequenceluz.com/">Fréquence Luz</a> ou disponible sur toutes les plateformes d'écoute, grâce à un hébergeur français, et le plus local possible : <a href="https://podcloud.fr/">podCloud</a>, basé à Toulouse.</p>
-                            <!-- <a href="#portfolio" class="btn btn-primary"> Numéros déjà parus</a> -->
+                    <div class="abouts_content col-md-12">
+                        <div class="col-md-6">
+                            <div class="single_abouts_text text-center wow slideInLeft" data-wow-duration="1s">
+                                <h4>Concrètement</h4>
+                                <!-- <h3>Le Serin</h3> -->
+                                <br>
+                                <p>Le Serin sera un journal bimestriel de 20 pages mettant en avant les acteurs du territoire sous forme d'une brochure à l'italienne avec des photographies, le tout en noir et blanc.</p>
+                                <p>Chaque reportage écrit dans le journal (imprimé localement sur papier recyclé à <a href="https://www.imprimerie-pere.fr">l'imprimerie Péré</a>) sera en lien avec sa version audio, sous forme de podcast, diffusé à la radio associative <a href="https://www.frequenceluz.com/">Fréquence Luz</a> ou disponible sur toutes les plateformes d'écoute, grâce à un hébergeur français, et le plus local possible : <a href="https://podcloud.fr/">podCloud</a>, basé à Toulouse.</p>
+                                <!-- <a href="#portfolio" class="btn btn-primary"> Numéros déjà parus</a> -->
+                            </div>
+                        </div>
+                        <br>
+                        <div class="col-md-6">
+                            <div class="single_abouts_text text-center wow slideInRight" data-wow-duration="1s">
+                                <img src="assets/images/LOGO LeSerin.png" alt="" />
+                            </div>
                         </div>
                     </div>
                 </div>
