--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                     <div class="col-md-6 wow fadeIn"><img src="assets/images/LOGOsimple-modified.png" alt="" /></div>
                                     <img src="assets/images/leserin_signature-modified.png" alt="" />
                                     <h4>Le Serin est un média positif : il met en lumière les initiatives inspirantes de son territoire, tout en suscitant l'émerveillement, par le biais d'un journal et de podcasts.</h4>
-                                    <a href="https://www.helloasso.com/associations/le-serin" class="btn-lg">Notre espace sur HelloAsso</a>
+                                    <a href="https://www.helloasso.com/associations/le-serin" class="btn-lg">Espace HelloAsso</a>
                                     <br><br><br><br>
                                     <h3>NDLR</h3>
                                     <p>Ce site est en construction et sera amené à changer très profondément. L'adresse à laquelle vous pouvez le trouver aussi. Nous comptons sur votre compréhension et votre indulgence.</p>
@@ -157,7 +157,7 @@
                                             <h4>VIP</h4>
                                             <h3>De la marque Pyrénées</h3>
                                             <p>Le Serin est, dès sa création, entré dans la communauté des Valeureux Influenceurs Pyrénéens, de la marque Pyrénées, démontrant son attachement à une culture locale, montagnarde, soucieuse de son environnement. </p>
-                                            <a href="https://marque-pyrenees.fr/qui-sont-les-vip/"><img src="assets/images/marque-pyrenees-logo-header.png" alt="" /></a>
+                                            <a href="https://marque-pyrenees.fr/qui-sont-les-vip/"><img src="assets/images/marque_pyrenees.png" alt="" /></a>
                                             <!--<a href="" class="btn btn-primary">click here</a>-->
                                         </div>
                                     </div>
@@ -335,28 +335,30 @@
             </div>
         </section> -->
 
-        <!-- <section id="mobaileapps" class="mobailapps">
+        <section id="mobaileapps" class="mobailapps">
             <div class="slider_overlay">
                 <div class="container">
                     <div class="row">
-                        <div class="main_mobail_apps_content wow zoomIn">
-                            <div class="col-md-5 col-sm-12 text-center">
+                        <div class="main_mobail_apps_content wow zoomIn text-center">
+                            <!-- <div class="col-md-5 col-sm-12 text-center">
                                 <img style="margin-top: 70px;" src="assets/images/iphone1.png" alt="" />
-                            </div>
-                            <div class="col-md-7 col-sm-12">
-                                <div class="single_monail_apps_text">
-                                    <h4> Happy to Announce </h4>
-                                    <h1>Mobile App <span>is Available in every OS platform.</span></h1>
-
-                                    <a href=""><img src="assets/images/google.png" alt="" /></a>
-                                    <a href=""><img src="assets/images/apps.png" alt="" /></a>
-                                </div>
-                            </div>
+                            </div> -->
+                            <br>
+                            <h1>Le numéro 0 du journal est disponible <a href="assets/lejournal/numero_0.pdf">ICI</a></h1>
+                            <h1>Le podcast associé est <a href="https://soundcloud.com/le-serin-621056249/portrait-n0-lucas-et-le-the-de-larrieulat">LA</a></h1>
+                            <br>
+                            <!-- <div class="col-md-7 col-sm-12"> -->
+                                <!-- <div class="single_monail_apps_text"> -->
+                                    <!-- <h4> Heureux de vous annoncer </h4> -->
+                                    <!-- <a href=""><img src="assets/images/google.png" alt="" /></a>
+                                    <a href=""><img src="assets/images/apps.png" alt="" /></a> -->
+                                <!-- </div> -->
+                            <!-- </div> -->
                         </div>
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
 
         <section id="footer_widget" class="footer_widget">
             <div class="container">
